--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-config-f1",
-  "version": "1.0.2",
+  "version": "1.0.4",
   "description": "My ESLint configuration",
   "main": "index.js",
   "scripts": {
@@ -18,6 +18,6 @@
     "eslint-plugin-standard": "latest"
   },
   "peerDependencies": {
-    "eslint": ">= 3"
+    "eslint": "4.x"
   }
 }
